unpackaged/main/default/objects/Field_Observation__c/Field_Observation__c.object-meta.xml
<CustomObject>
    <description>A custom Object for field agents to initiate deviations and complaints.</description>
    <label>Field Observation</label>
    <nameField>
        <label>Field Observation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>