unpackaged/main/default/objects/Field_Observation__c/fields/Description_of_Observation__c.field-meta.xml
<CustomField>
        <fullName>Description_of_Observation__c</fullName>
        <description>A simple text field to allow agents to create simple observations</description>
        <label>Description of Observation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>