unpackaged/main/default/objects/Field_Observation__c/fields/Predictions__c.field-meta.xml
<CustomField>
        <fullName>Predictions__c</fullName>
        <label>Predictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>