unpackaged/main/default/objects/Field_Observation__c/fields/Reporter_Email__c.field-meta.xml
<CustomField>
        <fullName>Reporter_Email__c</fullName>
        <label>Reporter Email</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>