unpackaged/main/default/objects/Field_Observation__c/recordTypes/New_Field_Observation.recordType-meta.xml
<RecordType>
        <fullName>New_Field_Observation</fullName>
        <active>true</active>
        <label>New Field Observation</label>
    </RecordType>